finishing initial readme

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ What is this?
 This is a simple script to convert scripts (built for python may work with others) into app bundles to easily run on Mac OS X.
 
 Usage
-------
+-------
 
 Basic command syntax::
     makeapp.py main supporting_module(s) -r resource1 -r resource2... [options]
@@ -38,3 +38,7 @@ Options
 
 -s, --script    add a script (either a file or text) to the launcher script. This text will be executed with sh 
                 after changing the working directory and prior to executing main
+
+Plans
+-------
+Maybe add configuration/build files or integrate with distribute setup.
